# vHSM

./: .gitignore  CMakeLists.txt  PLAN.md  PLAN_REKOR.md  README.md  json.json  run_test.sh  softClean.sh  softvhsmInitialisation.sh  tree.md  vHSM.slnx
chain_adapter/: devnet-test.json  go.mod  go.sum  merkle.sol
chain_adapter/eth/: eth_client.go
chain_adapter/merkle/: merkle.go  merkle_test.go
cmake/: CompilerFlags.cmake  FindCURL.cmake  FindOpenSSL.cmake  FindPostgreSQL.cmake  FindSQLite3.cmake  empty.cpp
configuration_Fabric/: README.MD  generate-network.bash
ledger/: go.mod  go.sum  main.go
network/: configtx.yaml  docker-compose.fabric.yml
network/fabric_configuration/: LDAP_ENV.sh  (+16 more)
plan/: PLAN.md  PLAN_REKOR.md  PLANv4.md  PLANv4.md.bak  PLANv5.md  structure.md
rest_api/: README.md  REFRESH_X09_CERT.md  VHSM_ENV_ADD.md  docker_cmd_history.pinc  gateway_client.go  go.mod  go.sum  install.sh  main.go  main_test.go  setup_tailscale.sh  validation.go
sql/: schema_sqlite.sql
src/: CMakeLists.txt
src/admin/: CMakeLists.txt
src/ai_stor/: CHANGELOG.md  README.md  ai-stor.cabal
src/ai_stor/src/: Main.hs
src/audit/: audit_log.h
src/core/: CMakeLists.txt  ClockUtils.h  clock.h  error.cpp  error.h  frozen_hsm_clock.cpp  frozen_hsm_clock.h  hsm_clock.h  secure_buffer.cpp  secure_buffer.h  system_hsm_clock.cpp  system_hsm_clock.h  types.h  types.h.bak  utils.cpp  utils.h
src/crypto/: CMakeLists.txt  CipherCtxGuard.h  MdCtxGuard.h  PkeyCtxGuard.h  SecureRNG.cpp  SecureRNG.h  aes_ecb.cpp  aes_ecb.h  aes_gcm.cpp  aes_gcm.h  ctr_drbg_aes256.cpp  ctr_drbg_aes256.h  ctx_guard.h  ecc.cpp  ecc.h  fhe_scheme.h  gentry_ideal_lattice.cpp  gentry_ideal_lattice.h  gentry_polynomial.cpp  gentry_polynomial.h  key_wrap.cpp  key_wrap.h  matrix_utils.h  rng.cpp  rng.h  rng_test.cpp  rsa.cpp  rsa.h  vhsm_crypto_tests
src/document_store/: go.mod  main.go
src/document_store/minio_utils/: minio.go
src/firmware/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
src/firmware/main/: CMakeLists.txt  hsm.cpp
src/keystore/: CMakeLists.txt  Key_fingerprint.cpp  Key_fingerprint.h  attribute_store.cpp  attribute_store.h  hsm_object.cpp  hsm_object.h  key_fingerprint.cpp  key_fingerprint.h  key_wrap.cpp  key_wrap.h  object_store.cpp  object_store.h  slot.cpp  slot.h  token.cpp  token.h
src/ledger/: ledger_client.cpp  ledger_client.h  ledger_entry.h  ledger_worker.cpp  ledger_worker.h
src/misc/: queue.cpp  queue.h
src/notification/: CMakeLists.txt  notification_bus.h  notification_event.h
src/persistence/: CMakeLists.txt
src/pkcs11/: CMakeLists.txt  pkcs11.h  pkcs11_func.h  pkcs11_types.h
src/rekor/: rekor_client.h
src/session/: CMakeLists.txt  FindContext.cpp  FindContext.h  OpContext.h  SignContext.cpp  SignContext.h  Types.h  session.cpp  session.h  session_manager.cpp  session_manager.h  slot_manager.cpp  slot_manager.h
src/signature_store/: CMakeLists.txt  StmtGuard.h  db_config.h  db_connection.cpp  db_connection.h  db_hmac_key.cpp  db_hmac_key.h  db_result_set.h  db_row.cpp  db_row.h  db_schema.cpp  db_schema.h  db_transaction.h  ledger_retry_queue.cpp  ledger_retry_queue.h  notification_repository.cpp  notification_repository.h  row_integrity.cpp  row_integrity.h  signature_dispatcher.cpp  signature_dispatcher.h  signature_query.cpp  signature_query.h  signature_repository.cpp  signature_repository.h  sqlite_connection.cpp  sqlite_connection.h  sqlite_helpers.cpp  sqlite_helpers.h  sqlite_transaction.cpp  sqlite_transaction.h  verification_service.cpp  verification_service.h
tests/: CMakeLists.txt
tests/integration/verify_flow/: README.md  index.html  package-lock.json  package.json
tests/integration/verify_flow/public/: index.html
tests/integration/verify_flow/src/: main.js  main.ts  thesis.ts
tests/integration/verify_flow/src/api/: studentApi.js  studentApi.ts  submissions.js  submissions.ts  thesis.ts
tests/integration/verify_flow/src/models/: Student.ts  SubmissionRequest.ts  SubmissionResponse.ts  Thesis.ts
tests/integration/verify_flow_new_chaincode/: README.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
tests/integration/verify_flow_new_chaincode/src/: App.tsx  index.css
tests/integration/verify_flow_new_chaincode/src/components/: Seal.tsx  TransactionHistory.tsx
tests/integration/verify_flow_new_chaincode/src/lib/: api.ts  auth.tsx
tests/integration/verify_flow_new_chaincode/src/pages/: DefenseHall.tsx  Login.tsx  Registry.tsx
tests/integration/verify_flow_new_chaincode/thesis-tester/: index.html  package-lock.json  package.json
tests/integration/verify_flow_new_chaincode/thesis-tester/src/: App.tsx  index.css
tests/integration/verify_flow_with_ca/: README.md  index.html  package-lock.json  package.json
tests/integration/verify_flow_with_ca/src/: main.ts
tests/integration/verify_flow_with_ca/src/api/: auth.ts  submissions.ts  thesis.ts
tests/integration/verify_flow_with_ca/src/models/: LoginResponse.ts  SubmissionRequest.ts  SubmissionResponse.ts  Thesis.ts
tests/rest_api/: README.md  test_gateway.go  test_query.go
tests/unit/: CMakeLists.txt
tests/unit/core/: CMakeLists.txt  RecordCreator.h  clock_test.cpp  secure_buffer_test.cpp  utils_test.cpp
tests/unit/crypto/: CMakeLists.txt  aes_gcm_test.cpp  cipherctxguard_test.cpp  ctr_drbg_aes256_test.cpp  ecc_test.cpp  mdctxguard_test.cpp  pkeyctxguard_test.cpp  rng_test.cpp  rsa_test.cpp
tests/unit/keystore/: CMakeLists.txt  Key_fingerprint_test.cpp  attribute_store_test.cpp  hsm_object_test.cpp  key_fingerprint_test.cpp  key_wrap_test.cpp  object_store_test.cpp  slot_token_slot_manager.cpp
tests/unit/notification/: CMakeLists.txt
tests/unit/session/: CMakeLists.txt  find_context_test.cpp  findcontext_test.cpp  session_manager_test.cpp  session_test.cpp  sign_context_test.cpp  signcontext_test.cpp  slot_manager_tests.cpp  slot_tests.cpp
tests/unit/signature_store/: CMakeLists.txt  db_tests.cpp  signature_repository_test.cpp  sqlite_connection_tests.cpp  sqlite_transaction_tests.cpp
vHSM/: vHSM.vcxproj
(+270 files in other folders)
